--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,14 @@
         }
     ],
     "autoload": {
-        "classmap": [
-            "src/"
-        ]
+        "psr-4": {
+            "BTCZ\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "BTCZ\\Test\\": "tests"
+        }
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
